# ai-swarm-atlassian

./: .claudeignore  .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  USAGE.md  execute.py  pyproject.toml  requirements.txt  run_tests.sh  setup.sh
config/: sdlc_config.example.yaml  sdlc_config.yaml
docs/: ARCHITECTURE.md  BOT_ACCOUNT_SETUP.md  COMMANDS.md  IMPLEMENTATION_PROMPT.md  SETUP_SUMMARY.md
docs/diagrams/: pipeline.puml
src/executor/: __init__.py
src/executor/mcp/: __init__.py  client.py
src/executor/mcp/servers/: confluence_server.py  jira_server.py
src/executor/models/: __init__.py  confluence_models.py  decomposition.py  execution_context.py  github_models.py  jira_models.py  llm_metrics.py  workflow_state.py
src/executor/phases/: __init__.py  confidence.py  context_builder.py  context_store.py  decomposition.py  llm_executor.py  phase_zero.py  post_execution.py  story_creator.py  validation.py
src/executor/prompts/: __init__.py  phase_zero_feedback_prompt.py  phase_zero_prompt.py  system_prompt.py  template_compliance.py  user_prompt.py
src/executor/utils/: __init__.py  config_loader.py  html_cleaner.py  markdown_formatter.py  rate_limiter.py  structured_logging.py
tests/: test_mcp_integration.py
tests/unit/: test_validation.py
